testausta, pit, checkstyle

--- a/dokumentointi/pit/com.zirinna.himmunhedelmapeli.gamelogic/index.html
+++ b/dokumentointi/pit/com.zirinna.himmunhedelmapeli.gamelogic/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>1</td>
-            <td>91% <div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">74/81</div></div></td>
-            <td>51% <div class="coverage_bar"><div class="coverage_complete" style="width:51%"></div><div class="coverage_ledgend">58/113</div></div></td>
+            <td>2</td>
+            <td>87% <div class="coverage_bar"><div class="coverage_complete" style="width:87%"></div><div class="coverage_ledgend">81/93</div></div></td>
+            <td>46% <div class="coverage_bar"><div class="coverage_complete" style="width:46%"></div><div class="coverage_ledgend">58/126</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,8 +93,14 @@
 
         <tr>
             <td><a href="./GameLogic.java.html">GameLogic.java</a></td>
-            <td><div class="coveragePercentage">91% </div><div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">74/81</div></div></td>
-            <td><div class="coveragePercentage">51% </div><div class="coverage_bar"><div class="coverage_complete" style="width:51%"></div><div class="coverage_ledgend">58/113</div></div></td>
+            <td><div class="coveragePercentage">86% </div><div class="coverage_bar"><div class="coverage_complete" style="width:86%"></div><div class="coverage_ledgend">65/76</div></div></td>
+            <td><div class="coveragePercentage">41% </div><div class="coverage_bar"><div class="coverage_complete" style="width:41%"></div><div class="coverage_ledgend">37/90</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./GameRules.java.html">GameRules.java</a></td>
+            <td><div class="coveragePercentage">94% </div><div class="coverage_bar"><div class="coverage_complete" style="width:94%"></div><div class="coverage_ledgend">16/17</div></div></td>
+            <td><div class="coveragePercentage">58% </div><div class="coverage_bar"><div class="coverage_complete" style="width:58%"></div><div class="coverage_ledgend">21/36</div></div></td>
         </tr>
 
      </tbody>
