--- a/dokumentointi/site/xref/allclasses-frame.html
+++ b/dokumentointi/site/xref/allclasses-frame.html
@@ -24,10 +24,16 @@
 				<a href="com/zirinna/himmunhedelmapeli/gamelogic/GameLogic.html" target="classFrame">GameLogic</a>
 			</li>
 						<li>
+				<a href="com/zirinna/himmunhedelmapeli/gamelogic/GameRules.html" target="classFrame">GameRules</a>
+			</li>
+						<li>
 				<a href="com/zirinna/himmunhedelmapeli/MainApp.html" target="classFrame">MainApp</a>
 			</li>
 						<li>
 				<a href="com/zirinna/himmunhedelmapeli/gameobjects/Tile.html" target="classFrame">Tile</a>
+			</li>
+						<li>
+				<a href="com/zirinna/himmunhedelmapeli/userinterface/UserInterface.html" target="classFrame">UserInterface</a>
 			</li>
 			      </ul>
 
