--- a/dokumentointi/site/xref/overview-frame.html
+++ b/dokumentointi/site/xref/overview-frame.html
@@ -24,6 +24,9 @@
 						<li>
 				<a href="com/zirinna/himmunhedelmapeli/gameobjects/package-frame.html" target="packageFrame">com.zirinna.himmunhedelmapeli.gameobjects</a>
 			</li>
+						<li>
+				<a href="com/zirinna/himmunhedelmapeli/userinterface/package-frame.html" target="packageFrame">com.zirinna.himmunhedelmapeli.userinterface</a>
+			</li>
 					</ul>
 
 	</body>
