--- a/dokumentointi/site/xref/overview-summary.html
+++ b/dokumentointi/site/xref/overview-summary.html
@@ -48,6 +48,11 @@
                 		<a href="com/zirinna/himmunhedelmapeli/gameobjects/package-summary.html">com.zirinna.himmunhedelmapeli.gameobjects</a>
               		</td>
             	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="com/zirinna/himmunhedelmapeli/userinterface/package-summary.html">com.zirinna.himmunhedelmapeli.userinterface</a>
+              		</td>
+            	</tr>
 	          	        	</tbody>
       	</table>
 		
