--- a/dokumentointi/site/xref/com/zirinna/himmunhedelmapeli/userinterface/package-frame.html
+++ b/dokumentointi/site/xref/com/zirinna/himmunhedelmapeli/userinterface/package-frame.html
@@ -3,23 +3,20 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>HimmunHedelmaPeli 1.0-kiwi Reference Package com.zirinna.himmunhedelmapeli.gamelogic</title>
+		<title>HimmunHedelmaPeli 1.0-kiwi Reference Package com.zirinna.himmunhedelmapeli.userinterface</title>
 		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 
 		<h3>
-        	<a href="package-summary.html" target="classFrame">com.zirinna.himmunhedelmapeli.gamelogic</a>
+        	<a href="package-summary.html" target="classFrame">com.zirinna.himmunhedelmapeli.userinterface</a>
       	</h3>
 
       	<h3>Classes</h3>
 
       	<ul>
       		          	<li>
-            	<a href="GameLogic.html" target="classFrame">GameLogic</a>
-          	</li>
-          	          	<li>
-            	<a href="GameRules.html" target="classFrame">GameRules</a>
+            	<a href="UserInterface.html" target="classFrame">UserInterface</a>
           	</li>
           	      	</ul>
 
