--- a/dokumentointi/site/xref/com/zirinna/himmunhedelmapeli/userinterface/package-summary.html
+++ b/dokumentointi/site/xref/com/zirinna/himmunhedelmapeli/userinterface/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>HimmunHedelmaPeli 1.0-kiwi Reference Package com.zirinna.himmunhedelmapeli.gamelogic</title>
+		<title>HimmunHedelmaPeli 1.0-kiwi Reference Package com.zirinna.himmunhedelmapeli.userinterface</title>
 		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package com.zirinna.himmunhedelmapeli.gamelogic</h2>
+		      	<h2>Package com.zirinna.himmunhedelmapeli.userinterface</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,12 +37,7 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="GameLogic.html" target="classFrame">GameLogic</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="GameRules.html" target="classFrame">GameRules</a>
+                		<a href="UserInterface.html" target="classFrame">UserInterface</a>
               		</td>
             	</tr>
 				        	</tbody>
